--- a/gustavomalafaya/gustavomalafaya/static/style/sass/screen.sass
+++ b/gustavomalafaya/gustavomalafaya/static/style/sass/screen.sass
@@ -1,7 +1,76 @@
-/*
-  Welcome to Compass.
-  In this file you should write your main styles. (or centralize your imports)
-  Import this file using the following HTML or equivalent:
-  <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-
 @import compass/reset
+@import 'compass/css3'
+
+$images_url: '../../images/'
+
+// FONTS
+$fnycd: 'Nothing You Could Do', cursive
+$fsil: 'Shadows Into Light', cursive
+$fasc: 'Amatic SC', cursive
+$fv: 'Verdana', sans-serif
+
+// COLORS
+$dark_grey: rgb(44, 44, 44)
+$light_grey: rgb(237, 237, 237)
+
+a, a:visited
+    color: black
+    text-decoration: none
+a:hover
+    text-decoration: underline
+
+.clear
+    clear: both
+
+body, html
+    height: 100%
+    max-height: 100%
+    font: 12px $fv
+body
+    background-color: $light_grey
+
+#header
+    position: relative
+    font: 34px $fasc
+    color: $light_grey
+    height: 400px
+    width: 100%
+    background: $dark_grey url($images_url + 'gm_background.jpg') no-repeat
+    +box-shadow()
+    
+    .inner
+        width: 940px
+        margin: 0 auto
+        padding-top: 10px
+    
+    #logo
+        float: left
+    
+    #top-nav
+        float: right
+        
+        a
+            color: $light_grey
+            margin-left: 20px    
+
+#container
+    width: 960px
+    margin: 0 auto
+    min-height: 365px
+    
+    .inner
+        margin: 10px 10px 0
+        
+#footer
+    position: relative
+    height: 100px
+    width: 100%
+    background-color: $dark_grey
+    
+    .inner
+        width: 940px
+        margin: 0 auto
+        height: 100%
+    +box-shadow()
+
+        
