--- a/gustavomalafaya/gustavomalafaya/static/style/stylesheets/screen.css
+++ b/gustavomalafaya/gustavomalafaya/static/style/stylesheets/screen.css
@@ -1,7 +1,3 @@
-/* Welcome to Compass.
- * In this file you should write your main styles. (or centralize your imports)
- * Import this file using the following HTML or equivalent:
- * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 /* line 17, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -65,4 +61,94 @@ a img {
 /* line 114, ../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.11.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
+}
+
+/* line 16, ../sass/screen.sass */
+a, a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+/* line 19, ../sass/screen.sass */
+a:hover {
+  text-decoration: underline;
+}
+
+/* line 22, ../sass/screen.sass */
+.clear {
+  clear: both;
+}
+
+/* line 25, ../sass/screen.sass */
+body, html {
+  height: 100%;
+  max-height: 100%;
+  font: 12px "Verdana", sans-serif;
+}
+
+/* line 29, ../sass/screen.sass */
+body {
+  background-color: #ededed;
+}
+
+/* line 32, ../sass/screen.sass */
+#header {
+  position: relative;
+  font: 34px "Amatic SC", cursive;
+  color: #ededed;
+  height: 400px;
+  width: 100%;
+  background: #2c2c2c url("../../images/gm_background.jpg") no-repeat;
+  -moz-box-shadow: 0px 0px 5px #333333;
+  -webkit-box-shadow: 0px 0px 5px #333333;
+  -o-box-shadow: 0px 0px 5px #333333;
+  box-shadow: 0px 0px 5px #333333;
+}
+/* line 41, ../sass/screen.sass */
+#header .inner {
+  width: 940px;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+/* line 46, ../sass/screen.sass */
+#header #logo {
+  float: left;
+}
+/* line 49, ../sass/screen.sass */
+#header #top-nav {
+  float: right;
+}
+/* line 52, ../sass/screen.sass */
+#header #top-nav a {
+  color: #ededed;
+  margin-left: 20px;
+}
+
+/* line 56, ../sass/screen.sass */
+#container {
+  width: 960px;
+  margin: 0 auto;
+  min-height: 365px;
+}
+/* line 61, ../sass/screen.sass */
+#container .inner {
+  margin: 10px 10px 0;
+}
+
+/* line 64, ../sass/screen.sass */
+#footer {
+  position: relative;
+  height: 100px;
+  width: 100%;
+  background-color: #2c2c2c;
+  -moz-box-shadow: 0px 0px 5px #333333;
+  -webkit-box-shadow: 0px 0px 5px #333333;
+  -o-box-shadow: 0px 0px 5px #333333;
+  box-shadow: 0px 0px 5px #333333;
+}
+/* line 70, ../sass/screen.sass */
+#footer .inner {
+  width: 940px;
+  margin: 0 auto;
+  height: 100%;
 }
