--- a/gustavomalafaya/gustavomalafaya/templates/base.html
+++ b/gustavomalafaya/gustavomalafaya/templates/base.html
@@ -9,6 +9,7 @@
         
         <title>{% block head_title %}{% endblock %} | GUSTAVO MALAFAYA</title>
         
+        <link href='http://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Shadows+Into+Light|Amatic+SC:400,700' rel='stylesheet' type='text/css'>
         <link href="{{ STATIC_URL }}site/style/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
         <link href="{{ STATIC_URL }}site/style/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
         <!--[if IE]>
@@ -17,12 +18,7 @@
         {% render_block "css" %} 
         
         {% block pre_head %}{% endblock %}
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/jquery/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/jquery/jquery.easing.1.3.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/jquery/jquery.history.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/modernizr/modernizr.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/halo.ajax.navigation.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}site/js/main.js"></script>
+        
         {% block extra_head %}{% endblock %}
 
         {% block extra_meta %}
@@ -46,6 +42,19 @@
         
     </head>
     <body>
+    	<div id="header">
+    		<div class="inner">
+				<div id="logo">
+					Gustavo Malafaya
+				</div>
+				<div id="top-nav">
+					<a href="#">Projects</a>
+					<a href="#">Blog</a>
+					<a href="#">About</a>
+				</div>
+				<div class="clear"></div>
+			</div>
+		</div>
     	<div id="container">
     		<div class="inner">
     			
